# agent-demo

./: .gitignore  pyproject.toml
agent-ui/src/components/playground/ChatArea/Messages/: ChatBlankState.tsx
agent-ui/src/components/playground/Sidebar/: Sidebar.tsx
backend/: playground.py  requirements.txt
backend/agents/: level_4_team.py  research_agent.py  web_agent.py
