[project]
name = "agentui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.8.1",
    "ddgs>=9.5.4",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.32.0",
    "groq>=0.31.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
